--- a/processor/Makefile
+++ b/processor/Makefile
@@ -1,8 +1,10 @@
 build:
+	mkdir -p out
 	g++ processor.cpp -o out/processor -O2 -std=c++17
 
 
 test: 
+	mkdir -p out
 	g++ run_tests.cpp -o out/run_tests -O2 -std=c++17
 	./out/run_tests
 
